refactor: 拆分为配置类, 数据管理类, DOM渲染类, 虚拟滚动类, 调度类 等模块

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src/**/*"]
 }
