feat: 可扩展的面板注册机制; 引入vitest单元测试; 示例面板;

--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.15.1",
   "devDependencies": {
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^24.10.2",
+    "@vitest/coverage-v8": "4.0.17",
+    "@vitest/ui": "^4.0.17",
+    "jsdom": "^27.4.0",
     "typescript": "^5.9.3",
-    "vite": "^7.2.7"
-  },
-  "dependencies": {
-
+    "vite": "^7.2.7",
+    "vitest": "^4.0.17"
   }
 }
